# inrith

./: README.md  pyproject.toml
inrith/: __init__.py  interval.py  interval_like.py  interval_union.py  math.py  utils.py
src/: interval.py  union.py
