[project]
name = "inrith"
version = "0.0.0"
authors = [
  { name="Iosiv42", email="alkane_church@proton.me" },
]
description = "Package for working with interval arithmetic."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Iosiv42/inrith"
Issues = "https://github.com/Iosiv42/inrith/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
